MEM-262 - Ad-hoc edits
- SCSS cleanup

--- a/modules/core/client/scss/components/hero-banner.scss
+++ b/modules/core/client/scss/components/hero-banner.scss
@@ -2,6 +2,7 @@
 // Banner
 .hero-banner {
     position: relative;
+    height: 23rem;
     border-bottom: 4px solid $gold;
     background-color: rgba($header-bg, 0.85);
 
