--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -85,7 +85,7 @@
                     <div class="feature-block">
                         <h3>Find Mines in B.C.</h3>
                         <p>The BC Mine Information website’s interactive map currently includes 15 mine sites</p>
-                        <a class="btn inverted" ui-sref="projects">View List</a>
+                        <a class="btn inverted" ui-sref="projects">Launch Map</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 <div class="col-md-4">
                     <div class="feature-block">
                         <h3>Legislation</h3>
-                        <p>Learn about the key statutes and regulations that apply to mining activities in British Columbia.</p>
+                        <p>Learn about the key statutes and regulations that apply to mining activities in the province of British Columbia.</p>
                         <a class="btn inverted" ui-sref="legislation">Learn More</a>
                     </div>
                 </div>
