--- a/modules/projects/client/views/projects-partials/projects-map-window.html
+++ b/modules/projects/client/views/projects-partials/projects-map-window.html
@@ -5,6 +5,6 @@
 	</div>
 	<div class="popup-detail-container" ng-if="parameter.overviewIntroText" ng-bind-html="parameter.overviewIntroText"></div>
 	<div class="popup-btn-container">
-		<a class="btn slide-r-btn inverted" ui-sref="project({projectid: parameter.code })"><span>View Mine</span><i class="material-icons">arrow_forward</i></a>
+		<a class="btn slide-r-btn inverted" ui-sref="project({projectid: parameter.code })"><span>Go to Mine Details</span><i class="material-icons">arrow_forward</i></a>
 	<div>
 </div>
