MEM-311 - Clicking the logo from the map page does not return home
- Bug fix

--- a/modules/maps/client/scss/map.scss
+++ b/modules/maps/client/scss/map.scss
@@ -52,7 +52,7 @@
 
 .map-header {
     padding: 0.5rem;
-    background: rgba($header-bg, 0.9);
+    background: $header-bg;
 
     .close-btn {
         margin-top: 4px;
