--- a/modules/maps/client/views/map.html
+++ b/modules/maps/client/views/map.html
@@ -3,7 +3,7 @@
     <div class="map-header-container">
         <div class="map-header clearfix">
             <div class="brand-container float-left">
-                <a class="brand" href="#" ng-click="toggleMapActive()"></a>
+                <a class="brand" ui-sref="home" ng-click="toggleMapHome()"></a>
             </div>
             <button class="btn close-btn float-right" ng-click="toggleMapActive()"><i class="material-icons">close</i></button>
         </div>
