Temp fix for the sign-in view

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -30,3 +30,4 @@
 @import "modules/maps/client/scss/map.scss";
 @import "modules/other-documents/client/scss/other-documents.scss";
 @import "modules/projects/client/scss/projects.scss";
+@import "modules/users/client/scss/sign-in.scss";
