--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -7,9 +7,9 @@
                 <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">BETA</span></h1>
                 <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
                 <div class="hb-btns">
-                    <a class="btn slide-l-btn hero-btn inverted" href ui-sref="projects"><i class="material-icons">list</i><span>View List</span></a>
+                    <a class="btn slide-l-btn hero-btn inverted" ui-sref="projects"><i class="material-icons">list</i><span>View List</span></a>
                     <span>or</span>
-                    <a class="btn slide-l-btn hero-btn inverted" href ui-sref="maps" x-project="projects"><i class="material-icons">map</i><span>View Map</span></a>
+                    <a class="btn slide-l-btn hero-btn inverted" ui-sref="maps" x-project="projects"><i class="material-icons">map</i><span>View Map</span></a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,9 @@
                     <div class="feature-block">
                         <h3>Find Mines in B.C.</h3>
                         <p>The BC Mine Information website’s interactive map currently includes 15 mine sites</p>
-                        <a class="btn inverted" ui-sref="projects">Launch Map</a>
+                        <a class="btn inverted" ui-sref="projects">View List</a>
+                        <span>&nbsp;or&nbsp;</span>
+                        <a class="btn inverted" ui-sref="maps">View Map</a>
                     </div>
                 </div>
             </div>
