ESM-710 add option to publish a CommentPeriod on the page that lists comment periods

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3393,6 +3393,10 @@ section {
 		width: 8.5rem;
 	}
 
+	.action-x3 {
+		width: 11.5rem;
+	}
+
 	.select-col {
 		position: relative;
 		padding-left: 3.5rem;
