MEM-262 - Ad-hoc Edits - mmti-list.scss
- Minor styling tweaks / modifications.
- Small content fix on home.html

--- a/modules/core/client/scss/components/mmti-list.scss
+++ b/modules/core/client/scss/components/mmti-list.scss
@@ -10,11 +10,7 @@
         padding: 0.6rem 0.75rem;
         font-size: 0.875rem;
         line-height: 1.3rem;
-        border-top: 1px solid #DDD;
-
-        &:first-child {
-            border-top: none;
-        }
+        background: #f7f8fa;
     }
 
     &.nv-pair {
