--- a/modules/core/client/scss/components/buttons.scss
+++ b/modules/core/client/scss/components/buttons.scss
@@ -67,7 +67,6 @@ main {
 
     span {
         display: inline-block;
-        //font-size: 0.875rem;
     }
 
     &:hover,
@@ -83,24 +82,24 @@ main {
 
 .slide-r-btn {
     i {
-        margin-left: 0.5rem;
+        margin-left: 0.25rem;
         transform: translateX(20px);
     }
 
     span {
-        margin-left: 0.5rem;
+        margin-left: 0.25rem;
         transform: translateX(12px);
     }
 }
 
 .slide-l-btn {
     i {
-        margin-right: 0.5rem;
+        margin-right: 0.25rem;
         transform: translateX(-20px);
     }
 
     span {
-        margin-right: 0.5rem;
+        margin-right: 0.25rem;
         transform: translateX(-12px);
     }
 }
@@ -124,7 +123,7 @@ main {
 }
 
 .content-btn {
-    padding: 0.5rem 0.75rem;
+    padding: 0.5rem;
     border: 2px solid #1a5a96;
     background: transparent;
     color: #1a5a96;
