--- a/modules/documents/client/views/docs.html
+++ b/modules/documents/client/views/docs.html
@@ -1,4 +1,5 @@
-<div class="view-title-container">
+<div class="view-title-container flex-row">
+	<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
 	<h1>Documents</h1>
 </div>
 
