--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -1,7 +1,7 @@
 
-<div class="view-title-container no-border">
-	<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Schedule</h1>
-	<!-- <tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions="" ></tmpl-permissions-gear> -->
+<div class="view-title-container flex-row">
+	<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+	<h1><span ng-show="project.name">Schedule</h1>
 </div>
 <div class="view-body-container project-schedule-view">
 	<div class="button-bar clearfix">
