--- a/modules/projects/client/views/project.abstract.html
+++ b/modules/projects/client/views/project.abstract.html
@@ -2,6 +2,7 @@
 
 <!-- SIDE NAVIGATION -->
 <aside class="left-panel" id="main-side-section">
+    <div class="sidenav-overlay" onclick="toggleSideNav();"></div>
     <tmpl-system-menu x-menu-context="'project'" x-project="project"></tmpl-system-menu>
 </aside>
 
