--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -62,7 +62,7 @@
 			<h4>Project Settings</h4>
 			<ul class="nav nav-pills nav-stacked">
 				<li ng-if="menu.project.userCan.manageRoles">
-					<a href x-role-users-modal x-context="menu.project" title="Edit Project Roles">
+					<a href x-role-users-modal x-context="menu.project" onclick="toggleSideNav();" title="Edit Project Roles">
 						<span class="glyphicon glyphicon-cog"></span><span>Edit Roles</span>
 					</a>
 				</li>
