--- a/modules/invitations/client/views/invitation-list.html
+++ b/modules/invitations/client/views/invitation-list.html
@@ -1,4 +1,6 @@
-<div class="view-title-container">
+
+<div class="view-title-container flex-row">
+    <button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
     <h1>Invitations</h1>
 </div>
 
