--- a/modules/documents/client/views/docs.html
+++ b/modules/documents/client/views/docs.html
@@ -1,13 +1,9 @@
 <div class="view-title-container flex-row">
-	<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+	<button class="btn icon-btn mobile-nav-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
 	<h1>Documents</h1>
-</div>
-
-<div class="view-body-insert">
-		<a href class="btn btn-default bt-sm" x-modal-document-instructions>
-			<span>Instructions for using the Documents Page </span>
-			<span class="glyphicon glyphicon-chevron-down"></span>
-		</a>
+	<div class="actions">
+		<button class="btn btn-default btn-sm" x-modal-document-instructions><span class="glyphicon glyphicon-info-sign"></span><span>Instructions</span></button>
+	</div>
 </div>
 
 <div class="view-body-container file-browser-container">
