--- a/modules/invitations/client/views/invitation-view.html
+++ b/modules/invitations/client/views/invitation-view.html
@@ -1,4 +1,5 @@
 <div class="view-title-container flex-row">
+	<a ui-sref="p.invitation.list" class="btn icon-btn mobile-nav-btn"><span class="glyphicon glyphicon-chevron-left"></span></a>
 	<h1>Invitations &nbsp;&rsaquo;&nbsp; {{s.communication.name}}</h1>
 	<div class="actions">
 		<button class="btn btn-default btn-sm" ui-sref="p.invitation.list">Cancel</button>
@@ -62,10 +63,6 @@
 
 			</table>
 		</div>
-	</div>
-
-	<div class="form-footer no-border clearfix">
-		<a class="back-btn btn btn-link pull-left" ui-sref="p.invitation.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Project Invitations</a>
 	</div>
 
 </div>
