--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -1,7 +1,6 @@
 
 	<div class="view-title-container flex-row">
-		<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
-		<h1><span ng-show="project.name">Edit Comment Period</h1>
+		<h1><span ng-show="project.name">Add/Edit Comment Period</h1>
 		<div class="actions">
 			<a class="btn btn-default btn-sm" ui-sref="p.commentperiod.list">Cancel</a>
 			<a class="btn btn-primary btn-sm" href ng-click="save()">Save</a>
