--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -1,8 +1,10 @@
 
 
-<div class="view-title-container">
+<div class="view-title-container flex-row">
+	<button class="btn icon-btn mobile-nav-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
 	<h1>Comment Periods</h1>
 </div>
+
 <!-- PUBLIC COMMENT PERIOD IF ACTIVE -->
 <div class="panel panel-default" ng-if="activeperiod">
 	<div class="pcp-alert clearfix">
