--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -1,5 +1,6 @@
 
-<div class="view-title-container">
+<div class="view-title-container flex-row">
+	<a class="btn icon-btn mobile-nav-btn" ui-sref="p.commentperiod.list"><span class="glyphicon glyphicon-chevron-left"></span></a>
     <h1>Public Comment Period</h1>
 </div>
 
