--- a/modules/project-conditions/client/views/projectcondition-edit.html
+++ b/modules/project-conditions/client/views/projectcondition-edit.html
@@ -2,7 +2,7 @@
 <form class="view-form" name="conditionForm">
 
 	<div class="view-title-container flex-row">
-		<h1>Edit Condition &nbsp;&rsaquo;&nbsp; {{condition.name}}<span class="placeholder-value" ng-if="!condition.name">Untitled</span></h1>
+		<h1>Add/Edit Condition &nbsp;&rsaquo;&nbsp; {{condition.name}}<span class="placeholder-value" ng-if="!condition.name">Untitled</span></h1>
 		<div class="actions">
 			<button class="btn btn-default btn-sm"
 				ui-sref="p.projectcondition.list">Cancel</button>
