--- a/modules/project-conditions/client/views/projectcondition-view.html
+++ b/modules/project-conditions/client/views/projectcondition-view.html
@@ -1,4 +1,5 @@
 <div class="view-title-container flex-row">
+	<a class="btn icon-btn mobile-nav-btn" ui-sref="p.projectcondition.list"><span class="glyphicon glyphicon glyphicon-chevron-left"></span></a>
 	<h1>Condition &nbsp;&rsaquo;&nbsp; {{condition.name}}</h1>
 	<div class="actions">
 		<button class="btn btn-sm btn-default"
