--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -1,6 +1,7 @@
 
-<div class="view-title-container">
-	<h1><span ng-show="project.name">Valued Components</h1>
+<div class="view-title-container flex-row">
+	<button class="btn icon-btn mobile-nav-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+	<h1>Valued Components</h1>
 </div>
 
 <div class="view-body-container">
