--- a/modules/core/client/styles/layout.scss
+++ b/modules/core/client/styles/layout.scss
@@ -20,9 +20,10 @@
 
     .left-panel {
         position: absolute;
+        z-index: 5;
         width: 100%;
         height: 100%;
-        z-index: 5;
+        overflow: hidden;
         visibility: hidden;
 
         .sidenav {
@@ -31,6 +32,7 @@
             bottom: 0;
             width: 22rem;
             overflow-y: auto;
+            box-shadow: 0 0 1rem #999;
             background: #FFF;
             transform: translateX(-22rem);
             transition: all 0.3s ease-out 0.1s;
@@ -63,7 +65,7 @@
 }
 
 @media (min-width: 1020px) {
-    .side-toggle-btn {
+    .mobile-nav-btn {
         display: none;
     }
 
@@ -80,12 +82,12 @@
 
         .main-panel {
             right: 0;
-            left: 22rem;
         }
 
         .left-panel {
             left: 0;
             width: 22rem;
+            border-right: 1px solid #eee;
             visibility: visible;
 
             .sidenav {
@@ -95,6 +97,10 @@
 
             .sidenav-overlay {
                 display: none;
+            }
+
+            + .main-panel {
+                left: 22rem;
             }
         }
     }
