--- a/modules/groups/client/views/group-view.html
+++ b/modules/groups/client/views/group-view.html
@@ -1,7 +1,7 @@
 <div class="view-title-container flex-row">
+	<a class="btn icon-btn mobile-nav-btn" ui-sref="p.group.list"><span class="glyphicon glyphicon glyphicon-chevron-left"></span></a>
 	<h1>Project Group &nbsp;&rsaquo;&nbsp; {{s.group.name}}</h1>
 	<div class="actions">
-		<button class="btn btn-default btn-sm" ui-sref="p.group.list">Cancel</button>
 		<button class="btn btn-default btn-sm" ng-if="project.userCan.createProjectUpdate" ng-click="$event.stopPropagation()" x-mode="'edit'"
 			ui-sref="p.group.edit({groupId:s.group._id})"><span class="glyphicon glyphicon-pencil"></span><span>Edit</span>
     </button>
@@ -44,10 +44,6 @@
 				<td colspan="3">No Project Members found.</td>
 			</tr>
 		</table>
-	</div>
-
-	<div class="form-footer no-border clearfix">
-		<a class="back-btn btn btn-link pull-left" ui-sref="p.group.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Project Groups</a>
 	</div>
 
 </div>
