--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+	<button class="btn icon-btn mobile-nav-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
 	<h1><span ng-show="project.name">Schedule</h1>
 </div>
 <div class="view-body-container project-schedule-view">
