--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -1,5 +1,6 @@
 
 <div class="view-title-container flex-row">
+	<a class="btn icon-btn mobile-nav-btn" ui-sref="p.vc.list"><span class="glyphicon glyphicon glyphicon-chevron-left"></span></a>
 	<h1>Valued Component &nbsp;&rsaquo;&nbsp; {{vc.title}}</h1>
 	<div class="actions">
 		<button class="btn btn-default btn-sm"
