ESM-816 - Left hand fly in/out
- Missed a file in previous push

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<button class="btn icon-btn side-toggle-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
+	<button class="btn icon-btn mobile-nav-btn" onclick="toggleSideNav();"><span class="glyphicon glyphicon-menu-hamburger"></span></button>
 	<h1>{{ project.name }}</h1>
 	<div class="actions">
 		<div class="actions-group" ng-if="environment === 'EAO' && authentication.user">
