--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -57,9 +57,16 @@
 				<li><a href="http://www2.gov.bc.ca/gov/content/home/accessibility" target="_blank">Accessibility</a></li>
 			</ul>
 			<ul class="connect-links float-right">
-				<li><img src="icons/facebook_circle.svg"/></li>
-				<li><img src="icons/twitter_circle.svg"/></li>
-				<li><img src="icons/google_circle.svg"/></li>
+				<!--
+				<div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-size="small" data-mobile-iframe="true">
+					<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
+				</div>
+				-->
+				<li>
+					<a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"><img src="/modules/core/client/images/facebook_circle.svg"/></a>
+				</li>
+				<li><img src="/modules/core/client/images/twitter_circle.svg"/></li>
+				<li><img src="/modules/core/client/images/google_circle.svg"/></li>
 			<ul>
 		</div>
 		
