--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -13,6 +13,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+	<!-- Facebook META -->
 	<meta property="og:site_name" content="{{title}}">
 	<meta property="og:title" content="{{title}}">
 	<meta property="og:description" content="{{description}}">
@@ -38,6 +39,19 @@
 </head>
 
 <body ng-cloak x-scroll ng-class="{'map-active': isMapActive}">
+	
+	<!-- Load Facebook SDK for JavaScript -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+
+
 	<tmpl-header class="header-container" ng-if="!isMapActive"></tmpl-header>
 	{% block content %}{% endblock %}
 	<tmpl-footer class="footer-container" ng-if="!isMapActive"></tmpl-footer>
@@ -70,6 +84,7 @@
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="{{host}}:35729/livereload.js"></script>
 	{% endif %}
+
 </body>
 
 </html>
